Add basic Search function for section update UI with list of new checkboxes

--- a/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
+++ b/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
@@ -6,20 +6,12 @@
         <div class="slds-grid slds-gutters">
             <div class="slds-col">
                 <div class="slds-box slds-box_xx-small slds-m-left_xx-small slds-m-right_xxx-small slds-m-bottom_xx-small">
-<!--
-                    <h2 class="header">Suggested sections to include:</h2>
-                    <lightning-input type="checkbox" label="Statement of need" name="input1" checked></lightning-input>
-                    <lightning-input type="checkbox" label="Program narrative" name="input2" ></lightning-input>
-                    <lightning-input type="checkbox" label="Plan of action" name="input3" checked></lightning-input>
-                    <lightning-input type="checkbox" label="Goals and objectives" name="input4" ></lightning-input>
-                    <lightning-input type="checkbox" label="Measurable outcomes" name="input5" ></lightning-input>
-                    <lightning-input type="checkbox" label="Budget narrative" name="input6" checked ></lightning-input>
-                    -->
                     <lightning-checkbox-group name="Suggested sections to include"
                         label="Suggested sections to include"
                         options={options}
                         value={value}
-                        onchange={handleChange}></lightning-checkbox-group>
+                        onchange={handleIncludeSectionChange}>
+                    </lightning-checkbox-group>
                 </div>        
             </div>
 
@@ -29,17 +21,23 @@
                     <div class="slds-var-m-around_medium">
                         <lightning-layout vertical-align="end" class="slds-var-m-bottom_small">
                             <lightning-layout-item flexibility="grow">
-                                <div onkeyup={handleKeyUp}>
+
+                                <div class="slds-var-m-around_medium">
                                     <lightning-input
-                                        name="enter-search"
-                                        label="Search for sections"
                                         type="search"
+                                        onchange={handleSectionSearchChange}
+                                        class="slds-var-m-bottom_small"
+                                        label="Search for sections"
+                                        value={searchKey}
                                     ></lightning-input>
+
+                                    <lightning-checkbox-group name="Sections found"
+                                        options={optionsSectionAdd}
+                                        value={valueSectionAdd}
+                                        onchange={handleNewSectionAdd}>
+                                    </lightning-checkbox-group>
                                 </div>
-                                <p if:true={queryTerm}>
-                                    Searched for {queryTerm}!
-                                </p>    
-            
+
                             </lightning-layout-item>
                         </lightning-layout>    
                     </div>
