Add Grant name to craete Header Grant

--- a/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
+++ b/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
@@ -3,6 +3,22 @@
     <lightning-card title="New Grant Application" icon-name="utility:builder">
         <lightning-button label="Create" slot="actions"></lightning-button>
 
+        <div class="slds-box slds-box_xx-small slds-m-left_xx-small slds-m-right_xxx-small slds-m-bottom_xx-small">
+
+            <lightning-input type="text" label="Grant Name" onchange={handleGrantNameChange}></lightning-input>
+
+            <!-- 
+            <lightning-combobox
+                name="progress"
+                label="Status"
+                value={statusValue}
+                placeholder="Select Progress"
+                options={statusOptions}
+                onchange={handleStatusChange} >
+            </lightning-combobox>
+            -->
+        </div>        
+
         <div class="slds-grid slds-gutters">
             <div class="slds-col">
                 <div class="slds-box slds-box_xx-small slds-m-left_xx-small slds-m-right_xxx-small slds-m-bottom_xx-small">
