Add grant adn section creation methods with related UI changes, customer record actions

--- a/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
+++ b/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
@@ -1,7 +1,7 @@
 <template>
     
     <lightning-card title="New Grant Application" icon-name="utility:builder">
-        <lightning-button label="Create" slot="actions"></lightning-button>
+        <lightning-button label="Create" slot="actions" onclick={handleApplicationRecordCreate}></lightning-button>
 
         <div class="slds-box slds-box_xx-small slds-m-left_xx-small slds-m-right_xxx-small slds-m-bottom_xx-small">
 
