Update passing data from Block-Section to Grant app components to edit application

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -14,6 +14,7 @@
                     text-block={sec.textblock}
                     section-id={sec.value}
                     section-has-blocks={sec.hasblocks}
+                    onselectedtext={hanldeSelectedTextChange}
                     key={sec.value}
                 ></c-ggw-section>
               </template>
