Add Sectio reorder action using lightning-dual-listbox

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -50,15 +50,17 @@
             
                 <c-ggw-order-sections
                   record-id={recordId}
+                  onsectionorderchange={handleSectionOrderChange}
                 ></c-ggw-order-sections>
 
             </center>  
         </div>  
-        <!------Footer Section -->
+        <!------Footer Section 
           <div class="slds-modal__footer">  
           <lightning-button icon-name="utility:save" label="Reorder" onclick={saveCloseModal}></lightning-button>
           <lightning-button icon-name="utility:close" label="Cancel" variant="brand" onclick={closeModal}></lightning-button>  
         </div>  
+        -->
       </div>  
     </div>  
   
