--- a/force-app/main/default/lwc/ggwOrderSections/ggwOrderSections.html
+++ b/force-app/main/default/lwc/ggwOrderSections/ggwOrderSections.html
@@ -1,7 +1,19 @@
 <template>
 
   <lightning-quick-action-panel header="Order Sections">
-  <div>
+    <div>
+
+      <lightning-dual-listbox name="sections"
+        source-label="Available Sections"
+        selected-label="Selected Sections"
+        options={sections}
+        value={selected}
+        onchange={handleSectionOrderChange}>
+      </lightning-dual-listbox>
+<!--
+  <div class="slds-box" >
+  <p>Selected values are: {selected}</p>
+  </div>      
 
     <lightning-datatable
       key-field="id"
@@ -10,14 +22,14 @@
       suppress-bottom-bar
       columns={columns}>
     </lightning-datatable>
-
-      </div>
-      <!--
-      <div slot="footer">
-        <lightning-button variant="neutral" label="Close" onclick={closeModal}></lightning-button>
-        <lightning-button variant="brand" label="Action" class="slds-m-left_x-small"></lightning-button>
-      </div>
 -->
+      </div>
+      
+      <div slot="footer">
+        <lightning-button variant="neutral" label="Cancel" onclick={closeQuickAction}></lightning-button>
+        <lightning-button variant="brand" label="Reorder" onclick={handleReorder} class="slds-m-left_x-small"></lightning-button>
+      </div>
+
     </lightning-quick-action-panel>
 
 </template>
