--- a/force-app/main/default/lwc/ggwSection/ggwSection.html
+++ b/force-app/main/default/lwc/ggwSection/ggwSection.html
@@ -4,12 +4,13 @@
         <lightning-button-icon icon-name="utility:add"  alternative-text="Add block" title="Add block"  onclick={showModal}></lightning-button-icon>
         <lightning-button-icon icon-name="utility:save"  alternative-text="Save" title="save" onclick={saveRichText}></lightning-button-icon>
         <lightning-button-icon icon-name="utility:insert_template"  alternative-text="Add to library" title="Add to library"  onclick={addBlockToLibrary}></lightning-button-icon>
-  
+  <!--
         <lightning-button-menu alternative-text="Order menu" variant="border-filled" icon-name="utility:settings" onselect={handleReorderOnselect}>
           <template for:each={sectionorder} for:item="ord">
             <lightning-menu-item value={ord} label={ord} key={ord}></lightning-menu-item>
             </template>
         </lightning-button-menu>
+-->
       </lightning-button-group>
         <div class="slds-box slds-box_xx-small slds-m-left_x-small slds-m-right_x-small slds-m-bottom_xx-small">            
           <!--  READ ONLY version
@@ -55,8 +56,8 @@
                 <lightning-button label="Save" onclick={saveCloseModal}></lightning-button>  
               </template>
               -->
-              <lightning-button icon-name="utility:save" label="Save" onclick={saveCloseModal}></lightning-button>
-              <lightning-button icon-name="utility:close" label="Cancel" variant="brand" onclick={closeModal}></lightning-button>  
+              <lightning-button icon-name="utility:close" label="Cancel" onclick={closeModal}></lightning-button>  
+              <lightning-button icon-name="utility:save" label="Save" variant="brand" onclick={saveCloseModal}></lightning-button>
             </div>  
           </div>  
         </div>  
