Add topics to show badges on content block

--- a/force-app/main/default/lwc/ggwContentBlockModal/ggwContentBlockModal.html
+++ b/force-app/main/default/lwc/ggwContentBlockModal/ggwContentBlockModal.html
@@ -30,10 +30,10 @@
                             value={block.displaytext}
                         ></lightning-formatted-rich-text>
                         
-                        <!-- Badge winner -->
+                        <!-- Badge winner icon-name="utility:moneybag" -->
                         <lightning-badge label={block.displaydate} slot="footer"></lightning-badge>
                         <lightning-badge label={block.wordcount} slot="footer"></lightning-badge>
-                        <lightning-badge label={block.displaybadge} icon-name="utility:moneybag" slot="footer"></lightning-badge>
+                        <lightning-badge label={block.displaybadge} slot="footer"></lightning-badge>
 
                     </lightning-card>
                 </div>
