--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -27,6 +27,7 @@
                     sectioncount={sec.sectioncount}
                     sortorder={sec.sortorder}
                     onselectedtext={hanldeSelectedTextChange}
+                    ondeletesection={handleDeleteSection}
                     key={sec.value}
                 ></c-ggw-section>
             </template>
