Add new sections to grant. Workaround refresh button on Grant editor UI

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -4,6 +4,7 @@
         <lightning-card title={displayTitle} icon-name="utility:builder">
             <lightning-button-group slot="actions">
               <lightning-button label="Reorder" onclick={reorderSections}></lightning-button>
+              <lightning-button icon-name="utility:refresh"  alternative-text="Refresh" title="Refresh" onclick={reloadSections}></lightning-button>
               <lightning-button label="Export" onclick={exportGrantVFPdf}></lightning-button>
             </lightning-button-group>
     
