#29 Add confirmation to delete also #30 handle add text block confirmation

--- a/force-app/main/default/lwc/ggwSection/ggwSection.html
+++ b/force-app/main/default/lwc/ggwSection/ggwSection.html
@@ -30,6 +30,7 @@
         </div>   
     </lightning-card>
 
+    <!-- OPEN Content Block Modal here -->
     <template if:true={openModal}>  
         <div class="slds-modal slds-fade-in-open slds-backdrop">  
           <div class="slds-modal__container">  
@@ -66,5 +67,11 @@
           </div>  
           </div>  
         </div>  
-    </template>      
+    </template>   
+    <!-- Delete confirmation Modal -->
+    <c-ggw-action-confirm-modal
+        class="confirmation"
+        confirmation={confirmation}
+        onbuttonclick={handleConfirmationButtonModal}>
+    </c-ggw-action-confirm-modal>   
 </template>
