Fix #41 bug update order number on sections display

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -20,6 +20,7 @@
               -->
                 <c-ggw-section
                     section-title={sec.label}
+                    display-title={sec.displaytitle}
                     text-block={sec.textblock}
                     section-id={sec.value}
                     section-has-blocks={sec.hasblocks}
