#76 enhancement POC for merge fields in content block

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -55,6 +55,7 @@
                       section-title={sec.label}
                       display-title={sec.displaytitle}
                       text-block={sec.textblock}
+                      text-block-formated={sec.textblockformat}
                       section-id={sec.value}
                       section-has-blocks={sec.hasblocks}
                       application-id={sec.appid}
