Update global value set language ISO codes, lang switch on pages

--- a/force-app/main/default/lwc/ggwLanguageSelector/ggwLanguageSelector.html
+++ b/force-app/main/default/lwc/ggwLanguageSelector/ggwLanguageSelector.html
@@ -1,9 +1,10 @@
 <template>
     <lightning-combobox
         variant="label-hidden"
-        value={variant}
-        onchange={variantChange}
-        options={variantOptions}
+        placeholder="Select language"
+        value={langauge}
+        onchange={langaugeChange}
+        options={langaugeOptions}
     >
     </lightning-combobox>
 </template>
