--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -4,11 +4,12 @@
     <lightning-quick-action-panel header={displayTitle}>
       <div>
           <lightning-card title={displayTitle} icon-name="utility:builder">
-            
-      
-                <lightning-button-group slot="actions">
-                  <c-ggw-language-selector></c-ggw-language-selector>
-                  <lightning-button label="Reorder" onclick={reorderSections}></lightning-button>
+              <lightning-button-group slot="actions" >
+                <!-- Display Langauge selector component -->
+                <c-ggw-language-selector language={language} class="slds-p-right_x-small" ></c-ggw-language-selector>
+
+                <lightning-button-group >
+                  <lightning-button label="Reorder" class="circle" onclick={reorderSections}></lightning-button>
                   <lightning-button icon-name="utility:refresh"  alternative-text="Refresh" title="Refresh" onclick={reloadSections}></lightning-button>
   
                   <lightning-button-menu onselect={handleExportMenuSelect} alternative-text="Export menu" 
@@ -20,7 +21,7 @@
                     <lightning-menu-item value="exportWORD" label="Word"></lightning-menu-item>
                   </lightning-button-menu>
                 </lightning-button-group>
-  
+              </lightning-button-group>
   
               <template if:true={showCard}>
                 <div class="slds-box slds-box_xx-small slds-m-left_x-small slds-m-right_x-small slds-m-bottom_xx-small">            
