--- a/force-app/main/default/lwc/ggwLanguageSelector/ggwLanguageSelector.html
+++ b/force-app/main/default/lwc/ggwLanguageSelector/ggwLanguageSelector.html
@@ -2,9 +2,9 @@
     <lightning-combobox
         variant="label-hidden"
         placeholder="Select language"
-        value={langauge}
-        onchange={langaugeChange}
-        options={langaugeOptions}
+        value={language}
+        onchange={languageChange}
+        options={languageOptions}
     >
     </lightning-combobox>
 </template>
