--- a/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
+++ b/force-app/main/default/lwc/ggwNewApplication/ggwNewApplication.html
@@ -2,7 +2,9 @@
     
     <lightning-card title="New Grant Application" icon-name="utility:builder">
         <lightning-button-group slot="actions">
-            <c-ggw-language-selector class="slds-var-p-right_x-small"></c-ggw-language-selector>
+            <c-ggw-language-selector class="slds-var-p-right_x-small"
+                onlanguagechange={handleLanguageChange}>
+            ></c-ggw-language-selector>
             <lightning-button-group>
                 <lightning-button label="Create" onclick={handleApplicationRecordCreate}></lightning-button>
             </lightning-button-group>
@@ -17,11 +19,12 @@
         <div class="slds-grid slds-gutters">
             <div class="slds-col">
                 <div class="slds-box slds-box_xx-small slds-var-m-left_xx-small slds-var-m-right_xxx-small slds-var-m-bottom_xx-small">
-                    <lightning-checkbox-group name="Suggested sections to include"
-                    label="Suggested sections to include"
-                    options={options}
-                    value={value}
-                    onchange={handleIncludeSectionChange}>
+                    <lightning-checkbox-group 
+                        name="Suggested sections to include"
+                        label="Suggested sections to include"
+                        options={options}
+                        value={value}
+                        onchange={handleIncludeSectionChange}>
                     </lightning-checkbox-group>
 
                 </div>        
@@ -44,7 +47,8 @@
                                         value={searchKey}
                                     ></lightning-input>
 
-                                    <lightning-checkbox-group name="Sections found"
+                                    <lightning-checkbox-group 
+                                        name="Sections found"
                                         options={optionsSectionAdd}
                                         value={valueSectionAdd}
                                         onchange={handleNewSectionAdd}>
