--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -60,6 +60,30 @@
                                 </template>
                               </div>
                             </div>
+                        </lightning-layout-item>
+                        <lightning-layout-item padding="around-small"> 
+                          <div class="header-column slds-p-top_x-large">
+                            <lightning-button-stateful
+                              label-when-off="Include Logo"
+                              label-when-on="Logo Included"
+                              label-when-hover="Exclude Logo"
+                              icon-name-when-off="utility:add"
+                              icon-name-when-on="utility:check"
+                              icon-name-when-hover="utility:close"
+                              selected={logoState}
+                              onclick={handleLogoSelectorClick}>
+                            </lightning-button-stateful>       
+                            
+                            <lightning-button-icon 
+                              icon-name="utility:delete"    
+                              variant="border-filled" 
+                              alternative-text="Delete"   
+                              class="slds-m-left_xx-small" 
+                              title="Delete"
+                              onclick={handleLogoDelete}>
+                            </lightning-button-icon>
+            
+                          </div>
                         </lightning-layout-item>  
                     </lightning-layout>
                 </div>
